--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Info tech </title>
+  <title>Info Tech</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <!-- Menu -->
+  <!-- Navbar -->
   <nav id="navbar">
-    <div class="logo">MyLogo</div>
+    <div class="logo">InfoTech</div>
     <ul class="menu">
       <li><a href="#">Home</a></li>
       <li><a href="#">About</a></li>
@@ -21,9 +21,14 @@
 
   <!-- Content -->
   <div class="content">
-    <h1>Scroll Down to See Navbar Shadow & Color Effect</h1>
-    <h3>This is my 1st tas.</h3>
-    <h3>Enjoy coding and learning....</h3>
+    <h1>Scroll Down to See Navbar Effect</h1>
+    <h3>This is my 1st task.</h3>
+    <h3>Enjoy coding and learning...</h3>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit.  
+      Keep scrolling to see the navbar change into a colorful gradient.
+    </p>
+    <p style="margin-top:1000px;">End of page 🚀</p>
   </div>
 
   <script src="script.js"></script>
